Return model_id in the routes: Get Stock and Get Catalog as id of REST ressource of shoe model.